--- a/src/main/resources/templates/Pacijent - popis zapisa.html
+++ b/src/main/resources/templates/Pacijent - popis zapisa.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -7,31 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js">  </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
-    <script>
-        function deleteRow(o) {
-            var trElem = o.parentNode.parentNode;
-            trElem.parentNode.removeChild(trElem);
-        }
-    </script>
+    <title>Povijest zapisa pacijenta</title>
 
     <style>
 
-
         Body {
-
             font-size: large;
-        }
-
-        input[type=text] {
-            width: 100%;
-            margin: 8px 0;
-            padding: 12px 20px;
-            display: inline-block;
-            border: 2px solid #f24521;
-            box-sizing: border-box;
-
         }
 
         button {
@@ -40,7 +23,7 @@
         }
 
         .container {
-                  position: absolute;
+              position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
@@ -50,14 +33,7 @@
         box-shadow: 0 15px 25px rgba(0,0,0,.6);
         border-radius: 50px;
         }
-
-        tbody tr:hover {
-            cursor: pointer;
-            background-color: #ccc;
-        }
     </style>
-
-    <title>Popis pacijenata</title>
 
 </head>
 
@@ -89,50 +65,77 @@
         </div>
     </nav>
 
+    <div class="row mb-4">
+        <div class="cold-flex justify-content-center">
+        </div>
+    </div>
 
-        <h1 style="text-align:center; padding:50px">Evidencija svih pacijenata</h1>
+    <div class="row mb-4">
+        <div class="cold-flex justify-content-center">
+        </div>
+    </div>
 
 
-    <form action="action_page.php">
-        <input type="text" placeholder="Traži" name="search">
-    </form>
+        <h1 style="text-align:center; padding:10px">Evidencija svih zapisa</h1>
 
-    <table id="userList" class="table .table-condensed">
+
+
+    <div class="row mb-4">
+        <div class="cold-flex justify-content-center">
+        </div>
+    </div>
+
+    <div class="row mb-4">
+        <div class="cold-flex justify-content-center">
+        </div>
+    </div>
+
+    <table class="table .table-condensed">
         <thead>
         <tr>
-            <th>Ime</th>
-            <th>Prezime</th>
-            <th>Datum Rođenja</th>
-            <th>Broj mobitela</th>
-            <th>email</th>
-            <th>MBO</th>
-
+            <th>rb.</th>
+            <th>Datum</th>
+            <th>Sistolički tlak</th>
+            <th>Dijastolički tlak</th>
+            <th>Broj otkucaja</th>
+            <th>Kratki opis</th>
         </tr>
         </thead>
 
         <tbody>
-        <tr class="clickable" th:each="item : ${userList}" onclick="window.location='/redirectToUser'">
-            <td th:text="${item.ime}"></td>
-            <td th:text="${item.prezime}"></td>
-            <td th:text="${item.datumRodenja}"></td>
-            <td th:text="${item.brojMobitela}"></td>
-            <td th:text="${item.email}"></td>
-            <td th:text="${item.mbo}"></td>
-            <td><a href="#" onclick="deleteRow(this);">Izbriši</a></td>
+        <tr>
+            <td>1</td>
+            <td>29.01.2023.</td>
+            <td>125</td>
+            <td>80</td>
+            <td>74</td>
+            <td>Super!</td>
+        </tr>
+
+        <tr>
+            <td>2</td>
+            <td>29.01.2023.</td>
+            <td>125</td>
+            <td>80</td>
+            <td>74</td>
+            <td>Super!</td>
+        </tr>
+
+        <tr>
+            <td>3</td>
+            <td>29.01.2023.</td>
+            <td>125</td>
+            <td>80</td>
+            <td>74</td>
+            <td>Super!</td>
         </tr>
 
         </tbody>
 
     </table>
 
-    <form>
+        <footer style="color: #f24521; text-align:center">Copyright &#169; Telemed / All rights reserved</footer>
 
-    <button type="submit" class="btn btn-danger btn-block mb-4" style="font-size: 20px; background-color: #f24521;"
-            onclick="window.location.href=/showCreateUser ">Dodaj novog pacijenta</button>
-
-    </form>
-
-        <footer style="color: #f24521; text-align: center">Copyright &#169; Telemed / All rights reserved</footer>
 
 </div>
 
