--- a/src/main/resources/templates/Pacijent - unos novog zapisa.html
+++ b/src/main/resources/templates/Pacijent - unos novog zapisa.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
-    <title>Unos novog pacijenta</title>
+    <title>Unos zapisa</title>
 
     <style>
 
@@ -19,12 +19,8 @@
             font-size: large;
         }
 
-        input[type=text],
-        input[type=password],
-        input[type=date],
-        input[type=tel],
-        input[type=email],
-        input[type=number] {
+        input[type=number],
+        textarea[id=opis] {
             width: 100%;
             margin: 8px 0;
             padding: 12px 20px;
@@ -38,25 +34,23 @@
             background-color: white;
         }
 
-        .container {
-         position: absolute;
-        top: 70%;
+        .box {
+        position: absolute;
+        top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        box-shadow: 0 15px 25px rgba(0,0,0,.6);
         width: 1000px;
         padding: 40px;
         box-sizing: border-box;
-        box-shadow: 0 15px 25px rgba(0,0,0,.6);
         border-radius: 50px;
-
         }
     </style>
-
 </head>
 
 <body>
+<div class="box">
 
-<div class="container">
 
     <nav class="navbar navbar-light bg-light navbar-expand-sm">
         <a class="navbar-brand" href="#">
@@ -83,50 +77,34 @@
     </nav>
 
 
-    <h1 style="text-align: center; padding:50px">Unos informacija o pacijentu</h1>
+        <h2 style="padding:40px; text-align: center">Unos zapisa stanja pacijenta</h2>
 
-    <form style="width: 50%; margin:0 auto;" action="addNewUser">
+    <div class="row mb-4">
+        <div class="cold-flex justify-content-center">
+        </div>
+    </div>
 
+    <form style="width: 50%; margin:0 auto;">
 
-
-        <form action="/addNewUser">
-
-            <div class="form-outline mb-4 .was-validated">
-            <label for="ime1">Ime</label>
-            <input type="text" id="ime1" name="ime1" required placeholder="Unesite ime">
-            </div>
-
-            <div class="form-outline mb-4 .was-validated">
-            <label for="prezime1">Prezime</label>
-            <input type="text" id="prezime1" name="prezime1" required placeholder="Unesite prezime">
-            </div>
-
-        <div class="form-outline mb-4 .was-validated">
-            <label for="datumRodenja1">datumRodenja</label>
-            <input type="date" id="datumRodenja1" name="datumRodenja1" required>
+        <div class="form-outline mb-4">
+            <label for="sistol">Sistolički tlak</label>
+            <input type="number" id="sistol" name="sistol" min="0" max="200" placeholder="mmHg" required>
         </div>
 
-        <div class="form-outline mb-4 .was-validated">
-            <label for="brojMobitela1">brojMobitela</label>
-            <input type="tel" id="brojMobitela1" name="brojMobitela1" pattern="[0-9]{3}-[0-9]{4}-[0-9]{3}"
-                   placeholder="091-1234-567" required>
+        <div class="form-outline mb-4">
+            <label for="dijabol">Dijastolički tlak</label>
+            <input type="number" id="dijabol" name="dijabol" min="0" max="200" placeholder="mmHg" required>
         </div>
 
-        <div class="form-outline mb-4 .was-validated">
-            <label for="email1">Email</label>
-            <input type="email" id="email1" name="email1" required placeholder="example@gmail.com">
+        <div class="form-outline mb-4">
+            <label for="otkucaji">Broj otkucaja</label>
+            <input type="number" id="otkucaji" name="otkucaji" min="0" max="400" placeholder="bpm" required>
         </div>
 
-        <div class="form-outline mb-4 .was-validated">
-            <label for="lozinka1">Lozinka</label>
-            <input type="password" id="lozinka1" name="lozinka1" required>
+        <div class="form-outline mb-4">
+            <label for="opis">Kratki opis trenutnog stanja</label>
+            <textarea name="opis" id="opis" cols="50" rows="5" style="text-align: center;"></textarea>
         </div>
-
-        <div class="form-outline mb-4 .was-validated">
-            <label for="mbo1">MBO</label>
-            <input type="number" id="mbo1" name="mbo1" maxlength="9" required>
-        </div>
-    </form>
 
         <div class="row mb-4">
             <div class="col d-flex justify-content-center">
@@ -135,11 +113,11 @@
 
         <button type="button" class="btn btn-danger btn-block mb-4"
                 style="font-size: 20px; background-color: #f24521;"
-                onclick="window.location.href='/listUsers'">Spremi</button>
+                onclick="window.location.href='patientrecord.html'">Podnesi</button>
 
     </form>
 
-    <footer style="color: #f24521;text-align:center; padding-bottom: 1%;">Copyright &#169; Telemed / All rights reserved</footer>
+        <footer style="color: #f24521; text-align:center">Copyright &#169; Telemed / All rights reserved</footer>
 
 </div>
 </body>
