--- a/src/main/resources/templates/Pacijent - popis zapisa.html
+++ b/src/main/resources/templates/Pacijent - popis zapisa.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta charset="UTF-8">
@@ -93,7 +93,6 @@
     <table class="table .table-condensed">
         <thead>
         <tr>
-            <th>rb.</th>
             <th>Datum</th>
             <th>Sistolički tlak</th>
             <th>Dijastolički tlak</th>
@@ -103,33 +102,13 @@
         </thead>
 
         <tbody>
-        <tr>
-            <td>1</td>
-            <td>29.01.2023.</td>
-            <td>125</td>
-            <td>80</td>
-            <td>74</td>
-            <td>Super!</td>
+        <tr th:each="item : ${userReportList}">
+            <td th:text="${item.date}"></td>
+            <td th:text="${item.systolic}"></td>
+            <td th:text="${item.diastolic}"></td>
+            <td th:text="${item.heartBeats}"></td>
+            <td th:text="${item.description}"></td>
         </tr>
-
-        <tr>
-            <td>2</td>
-            <td>29.01.2023.</td>
-            <td>125</td>
-            <td>80</td>
-            <td>74</td>
-            <td>Super!</td>
-        </tr>
-
-        <tr>
-            <td>3</td>
-            <td>29.01.2023.</td>
-            <td>125</td>
-            <td>80</td>
-            <td>74</td>
-            <td>Super!</td>
-        </tr>
-
         </tbody>
 
     </table>
