--- a/src/main/resources/templates/logIn.html
+++ b/src/main/resources/templates/logIn.html
@@ -19,7 +19,7 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        width: 400px;
+        width: 700px;
         padding: 40px;
         box-sizing: border-box;
         box-shadow: 0 15px 25px rgba(0,0,0,.6);
@@ -107,11 +107,11 @@
 
         <button type="button" class="btn btn-danger btn-block mb-4"
                 style="font-size: 20px; background-color: #f24521;"
-                onclick="window.location.href='patientinput.html'">Prijava pacijent</button>
+                onclick="window.location.href='Pacijent - unos novog zapisa.html'">Prijava pacijent</button>
 
         <button type="button" class="btn btn-danger btn-block mb-4"
                 style="font-size: 20px; background-color: #f24521;"
-                onclick="window.location.href='doctordashboard.html'">Prijava doktor</button>
+                onclick="window.location.href='Doktor - dashboard.html'">Prijava doktor</button>
 
     </form>
 
