--- a/src/main/resources/templates/logIn.html
+++ b/src/main/resources/templates/logIn.html
@@ -105,13 +105,10 @@
 
 
 
-        <button type="button" class="btn btn-danger btn-block mb-4"
+        <button type="submit" class="btn btn-danger btn-block mb-4"
                 style="font-size: 20px; background-color: #f24521;"
-                onclick="window.location.href='Pacijent - unos novog zapisa.html'">Prijava pacijent</button>
+                >Prijava</button>
 
-        <button type="button" class="btn btn-danger btn-block mb-4"
-                style="font-size: 20px; background-color: #f24521;"
-                onclick="window.location.href='Doktor - dashboard.html'">Prijava doktor</button>
 
     </form>
 
