--- a/src/main/resources/templates/Doktor - dashboard.html
+++ b/src/main/resources/templates/Doktor - dashboard.html
@@ -128,7 +128,7 @@
     <form>
 
     <button type="submit" class="btn btn-danger btn-block mb-4" style="font-size: 20px; background-color: #f24521;"
-            onclick="window.location.href=/showCreateUser ">Dodaj novog pacijenta</button>
+           >Dodaj novog pacijenta</button>
 
     </form>
 
