ekipa pazite kad pushate puno je toga bilo pregažno stavljeni repozitoriji za UserTmRepository i ReportTmRepository promjene u svim klasama ispravljeni nazivi za template ispravljeni template za logIn.html napravljena ponovno metoda za logiranje login sad radi

--- a/src/main/resources/templates/logIn.html
+++ b/src/main/resources/templates/logIn.html
@@ -79,16 +79,16 @@
     </div>
 
 
-    <form>
+    <form action="loginSubmit">
 
         <div class="LoginForm">
-            <label for="username" >Korisničko ime</label>
-            <input type="text" id="username" name="username" required>
+            <label for="email" >Korisničko ime</label>
+            <input type="text" id="email" name="email" required>
         </div>
 
         <div class="LoginForm2">
-            <label for="password">Lozinka</label>
-            <input type="password" id="password" name="password" required>
+            <label for="lozinka">Lozinka</label>
+            <input type="password" id="lozinka" name="lozinka" required>
 
         </div>
         <div class="row mb-4">
