--- a/src/main/resources/templates/doktor_dashboard.html
+++ b/src/main/resources/templates/doktor_dashboard.html
@@ -111,7 +111,7 @@
         </thead>
 
         <tbody>
-        <tr class="clickable" th:each="item : ${userList}" onclick="window.location='/redirectToUser'">
+        <tr th:each="user : ${userTMList}" th:onclick="|window.location.href = '/showUser?userId=${userTM.id}'|">
             <td th:text="${item.ime}"></td>
             <td th:text="${item.prezime}"></td>
             <td th:text="${item.datumRodenja}"></td>
@@ -119,6 +119,7 @@
             <td th:text="${item.email}"></td>
             <td th:text="${item.mbo}"></td>
             <td><a href="#" onclick="deleteRow(this);">Izbriši</a></td>
+            <td> <a th:href="@{'/showUser?userId=' + ${userTM.id}}"> View </a> </td>
         </tr>
 
         </tbody>
@@ -127,8 +128,10 @@
 
     <form>
 
-    <button type="submit" class="btn btn-danger btn-block mb-4" style="font-size: 20px; background-color: #f24521;"
-           >Dodaj novog pacijenta</button>
+        <button class="btn btn-danger btn-block mb-4" type="button" name="button" onclick="window.location.href='createNewUser'"
+        >Dodaj novog pacijenta</button>
+
+
 
     </form>
 
